# LINALG

./: .gitignore  CMakeLists.txt
LINALG/: CMakeLists.txt  main.cpp
LINALG/include/: game.h  matrix.h  object.h  point.h  renderable.h  standard_matrices.h  vector.h
LINALG/math/: deg_helper.h  matrix.cpp  matrix.h  standard_matrices.h  vec3d.cpp  vec3d.h  vector.cpp  vector.h
LINALG/models/: aabb.h  bullet.cpp  bullet.h  cube.cpp  cube.h  ship.cpp  ship.h
LINALG/play/: game.cpp  game.h
LINALG/src/: game.cpp  main.cpp  matrix.cpp  object.cpp  vector.cpp
LINALG/ui/: camera.cpp  camera.h  grid.cpp  grid.h  object.cpp  object.h  plane.cpp  plane.h  point.cpp  point.h  renderable.h  renderer.cpp  renderer.h
